<resources>
    <string name="app_name">Zhuangbility</string>
    <string name="app_name_english">ZhuangBility</string>
    <string name="default_color">默认</string>
    <string name="text_size">文字大小:</string>
    <string name="text_color">文字颜色:</string>
    <string name="text_mask">文字晕影:</string>
    <string name="text_direction">文字显示:</string>
    <string name="up">上</string>
    <string name="bottom">下</string>
    <string name="inside">内</string>
    <string name="beyond">外</string>
    <string name="black">黑</string>
    <string name="white">白</string>
    <string name="gray">灰</string>
    <string name="bold">粗体</string>
    <string name="italic">斜体</string>
    <string name="input_content">输入文字:</string>
    <string name="question_mark">\?</string>
    <string name="quality">模&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;式:</string>
    <string name="quality_title">画质</string>
    <string name="quality_passage">斗图分两派.\n高清派:生成的表情不会有质量损失.\n祖传派:图片质量会被压缩,失真.</string>
    <string name="hd">高清</string>
    <string name="lower_quality">祖传</string>
    <string name="pure_text">纯文字</string>
    <string name="filename">文件名: </string>
    <string name="make_fail">合成失败</string>
    <string name="rejected_hint">本宝宝对您的不信任表示很伤心!</string>
    <string name="folder_all">所有照片</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="image_preview_format">预览(%d)</string>
    <string name="preview">预览</string>
    <string name="select_album">选择相册</string>
    <string name="select_emoji">选择表情</string>
    <string name="setting_share_wechat">微信好友</string>
    <string name="have_not_install_qq">您并没有安装QQ</string>
    <string name="have_not_install_wechat">您并没有安装微信</string>
    <string name="file_not_found">文件不存在</string>
    <string name="splash_text">装逼从未如此简单</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="loading">加载中</string>
    <string name="third_party_licence">查看 Zhuangbility 所使用的第三方库</string>
    <string name="open_source_licence">开源库许可</string>
    <string name="granted">授权</string>
    <string name="zhuangbility_apache">查看Zhuangbility所使用的开源协议条款</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="zhihu">知乎</string>
    <string name="send_email">发送电子邮件</string>
    <string name="my_intro">我是lchad，一个Android开发者，生活在上海，欢迎上海的老司机来一起开车</string>
    <string name="developer">开发者 &amp; 设计者</string>
    <string name="a_fantastic_software">一个强大的表情包生成器</string>
    <string name="about">关于</string>
    <string name="github">GITHUB</string>
    <string name="intro">一个强大的表情包生成器</string>
    <string name="version">版本 1.0.1</string>
    <string name="lchad">lchad</string>
    <string name="developer_title">开发者</string>
    <string name="lchad_android">我是lchad，一个Android开发者，生活在上海，欢迎上海的老司机来一起开车</string>
    <string name="send_mail">发送电子邮件</string>
    <string name="licence">许可证</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="theme">主题</string>
    <string name="donate">捐赠</string>
    <string name="action_settings">Settings</string>
    <string name="software_licence">软件协议</string>
    <string name="search">搜索</string>
    <string name="from_internet">从网络</string>
</resources>
