<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always"/>

    <item

        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_theme"
        android:title="@string/theme"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_donate"
        android:title="@string/donate"
        app:showAsAction="ifRoom"/>
</menu>