<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.liuchad.zhuangbility.ui.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <!--ABOUT APP REDESIGN-->
        <android.support.v7.widget.CardView
            android:id="@+id/about_app_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_spacing"
            android:clickable="true"
            android:foreground="@drawable/ripple"
            android:paddingBottom="@dimen/card_spacing"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:padding="@dimen/sub_medium_spacing"
                        android:scaleType="fitXY"
                        android:src="@drawable/web_hi_res_512"
                        />
                </RelativeLayout>

                <TextView
                    android:id="@+id/about_app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/sub_small_spacing"
                    android:text="@string/app_name"
                    android:textColor="@color/theme_light"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/about_app_light_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/sub_small_spacing"
                    android:text="@string/intro"
                    android:textSize="@dimen/medium_text"
                    />

                <TextView
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/sub_small_spacing"
                    android:text="@string/version"
                    android:textColor="@color/md_grey_400"
                    android:textSize="@dimen/medium_text"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--DONALD SHTJEFNI-->
        <android.support.v7.widget.CardView
            android:id="@+id/about_donald_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_spacing"
            android:clickable="true"
            android:foreground="@drawable/ripple"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/donald_header_img"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        />

                    <ImageView
                        android:id="@+id/profile_img"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="105dp"
                        android:src="@mipmap/ic_launcher"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="158dp"
                        android:layout_toRightOf="@id/profile_img"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/lchad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lchad"
                            android:textSize="@dimen/sub_big_text"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/lchad_role"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/developer_title"
                            android:textSize="@dimen/medium_text"
                            />

                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/lchad_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/sub_big_spacing"
                    android:layout_marginRight="@dimen/sub_big_spacing"
                    android:layout_marginTop="@dimen/sub_big_spacing"
                    android:text="@string/lchad_android"
                    android:textSize="@dimen/sub_medium_text"
                    />
                <!--DONALD LINKS  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/sub_medium_spacing"
                    >

                    <TextView
                        android:id="@+id/about_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:padding="@dimen/sub_medium_spacing"
                        android:text="@string/send_mail"
                        android:textColor="@color/theme_light"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/about_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:padding="@dimen/sub_medium_spacing"
                        android:text="@string/github"
                        android:textColor="@color/theme_light"
                        android:textSize="@dimen/medium_text"
                        />

                    <TextView
                        android:id="@+id/about_sina_weibo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:padding="@dimen/sub_medium_spacing"
                        android:text="@string/sina_weibo"
                        android:textColor="@color/theme_light"
                        android:textSize="@dimen/medium_text"
                        />


                    <TextView
                        android:id="@+id/about_zhihu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:padding="@dimen/sub_medium_spacing"
                        android:text="@string/zhihu"
                        android:textColor="@color/theme_light"
                        android:textSize="@dimen/medium_text"
                        />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--APP LICENSES-->
        <android.support.v7.widget.CardView
            android:id="@+id/about_license_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_spacing"
            android:clickable="true"
            android:foreground="@drawable/ripple"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/about_license_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/medium_spacing"
                    android:paddingTop="@dimen/medium_spacing"
                    android:text="@string/open_source_licence"
                    android:textColor="@color/theme_light"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold"
                    />

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/ll_about_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/about_license_icon"
                        android:layout_width="@dimen/icon_width_height"
                        android:layout_height="@dimen/icon_width_height"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/big_spacing"
                        android:layout_marginRight="@dimen/big_spacing"
                        android:src="@drawable/ic_action_book"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/small_spacing"
                        android:paddingRight="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        >

                        <TextView
                            android:id="@+id/about_license_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/licence"
                            android:textColor="@color/md_dark_background"
                            android:textSize="@dimen/medium_text"
                            />

                        <TextView
                            android:id="@+id/about_license_item_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zhuangbility_apache"
                            android:textColor="@color/md_grey_400"
                            android:textSize="@dimen/sub_medium_text"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/ll_about_libs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/about_libs_icon"
                        android:layout_width="@dimen/icon_width_height"
                        android:layout_height="@dimen/icon_width_height"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/big_spacing"
                        android:layout_marginRight="@dimen/big_spacing"
                        android:src="@drawable/ic_action_book"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/medium_spacing"
                        android:paddingRight="@dimen/medium_spacing"
                        android:paddingTop="@dimen/small_spacing"
                        >

                        <TextView
                            android:id="@+id/about_libs_item"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/open_source_licence"
                            android:textColor="@color/md_dark_background"
                            android:textSize="@dimen/medium_text"
                            />

                        <TextView
                            android:id="@+id/about_libs_item_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/third_party_licence"
                            android:textColor="@color/md_grey_400"
                            android:textSize="@dimen/sub_medium_text"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
